# DB-OJT

./: CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
src/domain/entities/: task.py  user.py
src/domain/value_objects/: email.py  task_id.py  task_status.py
tests/unit/domain/entities/: test_task.py  test_user.py
tests/unit/domain/value_objects/: test_email.py  test_task_id.py  test_task_status.py
